refactor: streamline MongoDB collections to clean 10-collection architecture