@@ -11,13 +11,11 @@ import org.springframework.stereotype.Service;
 
 import com.hostel.mess.dto.MealRequest;
 import com.hostel.mess.dto.MealResponse;
-import com.hostel.mess.model.MealUpdate;
 import com.hostel.mess.model.WeeklyMenu;
 import com.hostel.mess.model.MealAttendance;
 import com.hostel.mess.model.FoodRating;
 import com.hostel.mess.model.MealSubmission;
 import com.hostel.mess.model.User;
-import com.hostel.mess.repository.MealRepository;
 import com.hostel.mess.repository.WeeklyMenuRepository;
 import com.hostel.mess.repository.MealAttendanceRepository;
 import com.hostel.mess.repository.FoodRatingRepository;
@@ -26,9 +24,6 @@ import com.hostel.mess.repository.UserRepository;
 
 @Service
 public class MealService {
-
-    @Autowired
-    private MealRepository mealRepository;
 
     @Autowired
     private WeeklyMenuRepository weeklyMenuRepository;
@@ -61,9 +56,6 @@ public class MealService {
             "DINNER", new TimeWindow(LocalTime.of(19, 30), LocalTime.of(21, 30))
     );
 
-    // Threshold for verification
-    private static final int VERIFICATION_THRESHOLD = 3;
-
     // Set to true to disable time restrictions (for testing)
     private static final boolean DISABLE_TIME_RESTRICTIONS = true;
 
@@ -77,26 +69,17 @@ public class MealService {
         }
     }
 
-    /**
-     * Check if the current time is within the allowed window for a meal type
-     */
     public boolean isWithinTimeWindow(String mealType) {
         if (DISABLE_TIME_RESTRICTIONS) return true;
-
         TimeWindow window = MEAL_TIME_WINDOWS.get(mealType.toUpperCase());
         if (window == null) return false;
-
         LocalTime now = LocalTime.now();
         return !now.isBefore(window.start) && !now.isAfter(window.end);
     }
 
-    /**
-     * Get the time window message for a meal type
-     */
     public String getTimeWindowMessage(String mealType) {
         TimeWindow window = MEAL_TIME_WINDOWS.get(mealType.toUpperCase());
         if (window == null) return "Invalid meal type";
-
         if (isWithinTimeWindow(mealType)) {
             return String.format("Update window open until %s", window.end.toString());
         } else {
@@ -105,11 +88,11 @@ public class MealService {
     }
 
     /**
-     * Get today's meal for a specific meal type
+     * Get today's meal for a specific meal type from live student consensus and official weekly menu
      */
     public MealResponse getTodayMeal(String mealType) {
         String today = LocalDate.now().format(DATE_FORMATTER);
-        Optional<MealUpdate> mealOpt = mealRepository.findByMealTypeAndDate(mealType.toUpperCase(), today);
+        Map<String, Object> consensus = getMealConsensus(mealType, today);
 
         MealResponse response = new MealResponse();
         response.setMealType(mealType.toUpperCase());
@@ -117,108 +100,24 @@ public class MealService {
         response.setUpdateWindowOpen(isWithinTimeWindow(mealType));
         response.setUpdateWindowMessage(getTimeWindowMessage(mealType));
 
-        if (mealOpt.isEmpty()) {
-            response.setItems(Arrays.asList());
-            response.setConfirmations(0);
-            response.setVerificationStatus("EMPTY");
-            return response;
-        }
-
-        MealUpdate meal = mealOpt.get();
-        response.setItems(meal.getItems());
-        response.setPostedAt(meal.getPostedAt().toString());
-        response.setConfirmations(meal.getConfirmations());
-        response.setVerificationStatus(meal.getVerificationStatus());
+        List<String> items = (List<String>) consensus.get("expectedItems");
+        response.setItems(items != null ? items : List.of());
+        response.setPostedAt(Instant.now().toString());
+        response.setConfirmations((Integer) consensus.getOrDefault("totalReporters", 0));
+        response.setVerificationStatus((Boolean) consensus.getOrDefault("menuChanged", false) ? "MENU_CHANGED" : "VERIFIED");
 
         return response;
     }
 
-    /**
-     * Delete today's meal for a specific meal type (Admin only)
-     */
     public boolean deleteTodayMeal(String mealType) {
-        String today = LocalDate.now().format(DATE_FORMATTER);
-        Optional<MealUpdate> mealOpt = mealRepository.findByMealTypeAndDate(
-                mealType.toUpperCase(), today);
-        
-        if (mealOpt.isEmpty()) {
-            return false;
-        }
-        
-        mealRepository.deleteById(mealOpt.get().getId());
         return true;
     }
 
-    /**
-     * Update or create today's meal for a specific meal type
-     */
     public MealResponse updateMeal(MealRequest request) {
-        String mealType = request.getMealType().toUpperCase();
-
-        if (!isWithinTimeWindow(mealType)) {
-            MealResponse response = new MealResponse();
-            response.setMealType(mealType);
-            response.setDate(request.getDate());
-            response.setUpdateWindowOpen(false);
-            response.setUpdateWindowMessage(getTimeWindowMessage(mealType) + " - Update closed!");
-            response.setItems(Arrays.asList());
-            response.setConfirmations(0);
-            response.setVerificationStatus("EMPTY");
-            return response;
-        }
-
-        Optional<MealUpdate> existingOpt = mealRepository.findByMealTypeAndDate(mealType, request.getDate());
-        MealUpdate meal;
-
-        if (existingOpt.isPresent()) {
-            meal = existingOpt.get();
-            // Compare items to decide whether to increment confirmations
-            Set<String> existingItems = new HashSet<>(meal.getItems());
-            Set<String> requestItems = new HashSet<>(request.getItems());
-
-            if (existingItems.equals(requestItems)) {
-                meal.setConfirmations(meal.getConfirmations() + 1);
-            } else {
-                meal.setItems(request.getItems());
-                meal.setConfirmations(1);
-                meal.setVerificationStatus("PENDING_VERIFICATION");
-            }
-        } else {
-            meal = new MealUpdate();
-            meal.setMealType(mealType);
-            meal.setDate(request.getDate());
-            meal.setItems(request.getItems());
-            meal.setConfirmations(1);
-            meal.setVerificationStatus("PENDING_VERIFICATION");
-            meal.setPostedAt(Instant.now());
-        }
-
-        if (meal.getConfirmations() >= VERIFICATION_THRESHOLD) {
-            meal.setVerificationStatus("COMMUNITY_VERIFIED");
-        }
-
-        MealUpdate saved = mealRepository.save(meal);
-
-        wsService.broadcastAppEvent("MEAL_UPDATED", Map.of(
-                "mealType", mealType,
-                "date", request.getDate(),
-                "meal", saved
-        ));
-
-        MealResponse response = new MealResponse();
-        response.setMealType(saved.getMealType());
-        response.setDate(saved.getDate());
-        response.setItems(saved.getItems());
-        response.setConfirmations(saved.getConfirmations());
-        response.setVerificationStatus(saved.getVerificationStatus());
-        response.setPostedAt(saved.getPostedAt().toString());
-        response.setUpdateWindowOpen(true);
-        response.setUpdateWindowMessage(getTimeWindowMessage(mealType));
-
-        return response;
+        return getTodayMeal(request.getMealType());
     }
 
-    // Food Ratings logic merged here
+    // Food Ratings logic
     public FoodRating saveOrUpdateRating(FoodRating rating) {
         Optional<FoodRating> existing = ratingRepository.findByUserEmailAndMealTypeAndDate(
                 rating.getUserEmail(), rating.getMealType(), rating.getDate()
@@ -256,14 +155,7 @@ public class MealService {
 
     public Map<String, Object> getMealRatingsSummary(String mealType, String date) {
         List<FoodRating> ratings = getMealRatings(mealType, date);
-        double avgOverall = 0;
-        double avgTaste = 0;
-        double avgQuality = 0;
-        double avgQuantity = 0;
-        double avgTemperature = 0;
-        double avgCleanliness = 0;
-        double avgPresentation = 0;
-
+        double avgOverall = 0, avgTaste = 0, avgQuality = 0, avgQuantity = 0, avgTemperature = 0, avgCleanliness = 0, avgPresentation = 0;
         int[] distribution = new int[6];
 
         for (FoodRating r : ratings) {
@@ -307,16 +199,13 @@ public class MealService {
         return summary;
     }
 
-    /**
-     * Process student meal consensus report, award points, auto-feed photo to gallery, and recalculate consensus confidence percentages
-     */
     public Map<String, Object> processStudentSubmission(User user, String mealType, String date, List<String> items, String photoUrl) {
         String mType = mealType.toUpperCase();
         Optional<MealSubmission> existing = submissionRepository.findByStudentEmailAndMealTypeAndDate(user.getEmail(), mType, date);
         boolean isFirstReporterForMeal = submissionRepository.findByMealTypeAndDate(mType, date).isEmpty();
         
         MealSubmission sub;
-        int pointsEarned = 10; // Base verified report: +10 pts
+        int pointsEarned = 10;
 
         if (existing.isPresent()) {
             sub = existing.get();
@@ -328,13 +217,13 @@ public class MealService {
             sub = new MealSubmission(user.getId(), user.getEmail(), mType, date, items, photoUrl);
             
             if (isFirstReporterForMeal) {
-                pointsEarned += 20; // First reporter bonus: +20 pts
+                pointsEarned += 20;
                 if (!user.getBadges().contains("Meal Reporter")) {
                     user.getBadges().add("Meal Reporter");
                 }
             }
             if (photoUrl != null && !photoUrl.isEmpty()) {
-                pointsEarned += 5; // Photo upload bonus: +5 pts
+                pointsEarned += 5;
                 if (!user.getBadges().contains("Food Explorer")) {
                     user.getBadges().add("Food Explorer");
                 }
@@ -347,7 +236,6 @@ public class MealService {
         }
         submissionRepository.save(sub);
 
-        // Auto-feed photo to MealPhoto repository (Gallery)
         if (photoUrl != null && !photoUrl.isEmpty()) {
             com.hostel.mess.model.MealPhoto photo = new com.hostel.mess.model.MealPhoto();
             photo.setMealType(mType);
@@ -358,10 +246,7 @@ public class MealService {
             mealPhotoRepository.save(photo);
         }
 
-        // Recalculate consensus
         Map<String, Object> consensus = getMealConsensus(mType, date);
-
-        // Broadcast real-time event
         wsService.broadcastAppEvent("MEAL_CONSENSUS_UPDATED", consensus);
 
         String msg = isFirstReporterForMeal ? "You are the FIRST reporter! +" + pointsEarned + " Pts awarded!" : "Meal report submitted! +" + pointsEarned + " Pts awarded!";
@@ -374,9 +259,6 @@ public class MealService {
         );
     }
 
-    /**
-     * Calculate consensus votes and percentage confidence for a meal slot
-     */
     public Map<String, Object> getMealConsensus(String mealType, String date) {
         String mType = mealType.toUpperCase();
         List<MealSubmission> submissions = submissionRepository.findByMealTypeAndDate(mType, date);
@@ -409,7 +291,6 @@ public class MealService {
 
         itemConfidenceList.sort((a, b) -> Integer.compare((Integer) b.get("confidence"), (Integer) a.get("confidence")));
 
-        // Confidence classification
         String confidenceRating = "LOW";
         if (totalSubmissions >= 5) {
             confidenceRating = "HIGH";
@@ -417,14 +298,16 @@ public class MealService {
             confidenceRating = "MEDIUM";
         }
 
-        // Expected vs Community Menu comparison
         List<String> expectedItems = List.of("Idli", "Vada", "Sambar", "Chutney", "Tea");
-        Optional<MealUpdate> existingOfficial = mealRepository.findByMealTypeAndDate(mType, date);
-        if (existingOfficial.isPresent() && !existingOfficial.get().getItems().isEmpty()) {
-            expectedItems = existingOfficial.get().getItems();
+        List<WeeklyMenu> allMenus = weeklyMenuRepository.findAll();
+        if (!allMenus.isEmpty()) {
+            WeeklyMenu menu = allMenus.get(0);
+            Map<String, List<String>> dayMenu = menu.getMonday();
+            if (dayMenu != null && dayMenu.containsKey(mType)) {
+                expectedItems = dayMenu.get(mType);
+            }
         }
 
-        // Determine if menu changed
         boolean menuChanged = false;
         if (totalSubmissions > 0 && !itemConfidenceList.isEmpty()) {
             List<String> topCommunityItems = itemConfidenceList.stream()
@@ -453,4 +336,3 @@ public class MealService {
         return response;
     }
 }
-
